--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "canvas-confetti": "^1.9.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "standard": "^17.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
